adding meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="title" content="Sarah Macintosh Portfolio">
+    <meta name="description" content="System Design Engineering student and UX designer Sarah Macintosh's portfolio.">
+    <meta name="keywords" content="ux, design, systems design, engineer, coop, student">
+    <meta property="og:image" content="../assets/water-stream.jpeg">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
     <link rel="icon" href="<%= BASE_URL %>favicon.svg">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
