--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <link rel="icon" href="<%= BASE_URL %>favicon.svg">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Sarah Macintosh Portfolio</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but why don't you have JavaScript enabled? Please.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
